--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,29 +21,79 @@ stages:          # List of stages for jobs, and their order of execution
   - test
   - deploy
 
-build-job:       # This job runs in the build stage, which runs first.
+build-test-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
     - echo "Compile complete."
+  tags:
+    - kf-test
+  rules:
+    - if: $CI_COMMIT_BRANCH == "test"
+      when: always
 
-unit-test-job:   # This job runs in the test stage.
+
+unit-test-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
     - sleep 10
     - echo "Code coverage is 90%"
+  tags:
+    - kf-test
+  rules:
+    - if: $CI_COMMIT_BRANCH == "test"
+      when: always
 
-lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
-  script:
-    - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
-    - echo "No lint issues found."
-
-deploy-job:      # This job runs in the deploy stage.
+deploy-test-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   environment: production
   script:
     - echo "Deploying application..."
     - echo "Application successfully deployed."
+  tags:
+    - kf-test
+  rules:
+    - if: $CI_COMMIT_BRANCH == "test"
+      when: always
+
+
+
+
+build-prod-job:       # This job runs in the build stage, which runs first.
+  stage: build
+  script:
+    - echo "Compiling the code..."
+    - echo "Compile complete."
+  tags:
+    - kf-prod
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+      when: always
+
+
+unit-prod-test-job:   # This job runs in the test stage.
+  stage: test    # It only starts when the job in the build stage completes successfully.
+  script:
+    - echo "Running unit tests... This will take about 60 seconds."
+    - sleep 10
+    - echo "Code coverage is 90%"
+  tags:
+    - kf-prod
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+      when: always
+
+
+
+deploy-prod-job:      # This job runs in the deploy stage.
+  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
+  environment: production
+  script:
+    - echo "Deploying application..."
+    - echo "Application successfully deployed."
+  tags:
+    - kf-prod
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+      when: manual
