--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,9 @@ build-test-job:       # This job runs in the build stage, which runs first.
     - echo "Compiling the code..."
     - echo "Compile complete."
     - VERSION=$(git describe --tags --abbrev=0 | awk -F '[-.]' '{print "v1.0."$3+1}')
+    - echo $VERSION
     - IMAGE_NAME=$(192.168.1.98/channel/flask-demo:$VERSION)
+    - echo $IMAGE_NAME
     - docker build -t IMAGE_NAME .
     - docker tag $VERSION
     - docker push IMAGE_NAME
