--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,13 +31,15 @@ build-test-job:       # This job runs in the build stage, which runs first.
   script:
     - echo "Compiling the code..."
     - echo "Compile complete."
-    - VERSION=$(git describe --tags --abbrev=0 | awk -F '[-.]' '{print "v1.0."$3+1}')
-    - echo $VERSION
-    - IMAGE_NAME=$(192.168.1.98/channel/flask-demo:$VERSION)
-    - echo $IMAGE_NAME
-    - docker build -t IMAGE_NAME .
-    - docker tag $VERSION
-    - docker push IMAGE_NAME
+    - CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+    - echo $CURRENT_BRANCH
+    # - VERSION=$(git describe --tags --abbrev=0 | awk -F '[-.]' '{print "v1.0."$3+1}')
+    # - echo $VERSION
+    # - IMAGE_NAME=$(192.168.1.98/channel/flask-demo:$VERSION)
+    # - echo $IMAGE_NAME
+    # - docker build -t IMAGE_NAME .
+    # - docker tag $VERSION
+    # - docker push IMAGE_NAME
   tags:
     - kf-test
   rules:
@@ -81,7 +83,7 @@ build-prod-job:       # This job runs in the build stage, which runs first.
     - kf-prod
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
-      when: always
+      when: manual
 
 
 unit-prod-test-job:   # This job runs in the test stage.
