--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ build-test-job:       # This job runs in the build stage, which runs first.
     # - echo $VERSION
     - IMAGE_NAME=192.168.1.98/channel-test/flask-demo:$IMAGE_TAG
     - echo $IMAGE_NAME
-    - docker build -t IMAGE_NAME .
+    - docker build -t $IMAGE_NAME .
     # - docker tag $VERSION
     - docker push IMAGE_NAME
   allow_failure: false
