--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,19 +29,13 @@ before_script:
 build-test-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
-    # - CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-    # - echo $CURRENT_BRANCH
     - IMAGE_TAG="$(date +%Y%m%d%H%M%S)"
     - echo $IMAGE_TAG
-    # - VERSION=$(git describe --tags --abbrev=0 | awk -F '[-.]' '{print "v1.0."$3+1}')
-    # - echo $VERSION
     - IMAGE_NAME=192.168.1.98/channel-test/flask-demo:$IMAGE_TAG
     - echo $IMAGE_NAME
     - docker build -t $IMAGE_NAME .
     # - docker tag $VERSION
-    - docker push IMAGE_NAME
+    - docker push $IMAGE_NAME
   allow_failure: false
   tags:
     - kf-test
