--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,9 @@ stages:          # List of stages for jobs, and their order of execution
   - build
   - test
   - deploy
+  - prod-build
+  - prod-test
+  - prod-deploy
 
 before_script:
   - echo "docker login 192.168.1.98"
@@ -63,7 +66,7 @@ unit-test-test-job:   # This job runs in the test stage.
 
 deploy-test-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  environment: production
+  # environment: production
   script:
     - echo "Deploying application..."
     - echo "Application successfully deployed."
@@ -77,7 +80,7 @@ deploy-test-job:      # This job runs in the deploy stage.
 
 
 build-prod-job:       # This job runs in the build stage, which runs first.
-  stage: build
+  stage: prod-build
   script:
     - IMAGE_TAG="$(date +%Y%m%d%H%M%S)"
     - echo $IMAGE_TAG
@@ -96,7 +99,7 @@ build-prod-job:       # This job runs in the build stage, which runs first.
 
 
 unit-prod-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
+  stage: prod-test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
     - sleep 10
@@ -110,8 +113,8 @@ unit-prod-test-job:   # This job runs in the test stage.
 
 
 deploy-prod-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  environment: production
+  stage: prod-deploy  # It only runs when *both* jobs in the test stage complete successfully.
+  # environment: production
   script:
     - echo "Deploying application..."
     - echo "Application successfully deployed."
